--- a/video_game_clustering.ipynb
+++ b/video_game_clustering.ipynb
@@ -724,11 +724,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "['Early Access','Design & Illustration','Photo Editing','Utilities','Video Production','Game Development','Animation & Modeling','Audio Production','Software Training','Web Publishing','Education','Accounting','Movie','Documentary','Tutorial','360 Video']"
+    "df_explode = df_explode[~df_explode['genres'].isin(['Early Access','Design & Illustration','Photo Editing','Utilities','Video Production','Game Development','Animation & Modeling','Audio Production','Software Training','Web Publishing','Education','Accounting','Movie','Documentary','Tutorial','360 Video'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Single-player', 'Family Sharing', 'Multi-player', 'Co-op',\n",
+       "       'Online Co-op', 'PvP', 'Shared/Split Screen PvP',\n",
+       "       'Shared/Split Screen Co-op', 'Shared/Split Screen',\n",
+       "       'Steam Achievements', 'Includes level editor',\n",
+       "       'Remote Play Together', 'Steam Cloud', 'Full controller support',\n",
+       "       'Stats', 'HDR available', 'Tracked Controller Support', 'VR Only',\n",
+       "       'Online PvP', 'Partial Controller Support', 'MMO',\n",
+       "       'Cross-Platform Multiplayer', 'In-App Purchases',\n",
+       "       'Steam Leaderboards', 'Steam Workshop', 'LAN Co-op',\n",
+       "       'Remote Play on TV', 'Captions available', 'LAN PvP',\n",
+       "       'Steam Trading Cards', 'VR Supported', 'Commentary available',\n",
+       "       'Remote Play on Phone', 'Remote Play on Tablet',\n",
+       "       'Steam Turn Notifications', 'Includes Source SDK',\n",
+       "       'Steam Timeline', 'VR Support', 'SteamVR Collectibles',\n",
+       "       'Valve Anti-Cheat enabled', 'Mods', 'Mods (require HL2)', nan],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_explode['categories'].unique()"
    ]
   },
   {
